# pruneapple

./: .editorconfig  .env.example  .gitignore  .swiftlint.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEV_TODO.md  GEMINI.md  HELP.md  IntegrationTest.swift  IntegrationTestRun  LICENSE  MEMORY.md  Makefile  PLAN.md  PRD.md  Package.swift  Project.swift  README.md  make_icon.py  pyproject.toml  skills-lock.json  test_symlink  test_symlink.swift
.agents/: original_prompt.md  victory_audit.md
.agents/explorer_1/: BRIEFING.md  handoff.md  mcp_findings.md
.agents/implementer_1/: BRIEFING.md  handoff.md  progress.md
.agents/orchestrator/: BRIEFING.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md
.agents/victory_auditor/: BRIEFING.md  handoff.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
Targets/CleanApple/Sources/: CSVExporter.swift  CleanAppleApp.swift  DiskAnalyzer.swift  DiskMapView.swift  Metrics.swift  PermissionManager.swift  ResultTableView.swift  ScannerEngine.swift  SettingsView.swift
Targets/CleanApple/Tests/: ScannerEngineTests.swift
Targets/CleanApple/UITests/: CleanAppleUITests.swift
Targets/Pruneapple/Sources/: AIEngine.swift  AppStorageKeys.swift  CSVExporter.swift  DeepLinkManager.swift  DiskAnalyzer.swift  DiskMapView.swift  DonationView.swift  FileItem+Sorting.swift  Metrics.swift  PruneappleApp.swift  ResultTableView.swift  ScannerEngine.swift  SettingsView.swift  SmartPruneView.swift  UpdateManager.swift
Tuist/: Package.swift
tests/: test_placeholder.py
website/: thank-you.html
(+11 files in other folders)
